--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.replica.replicaisland" android:versionName="1.21" android:versionCode="12">
+    package="com.replica.replicaisland" android:versionName="1.3" android:versionCode="13">
     <application android:icon="@drawable/icon"
     			 android:label="@string/app_name"
+    			 android:debuggable="false"
     			 android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
     	<activity android:name=".MainMenuActivity"
                   android:label="@string/app_name" 
